tests/parser/valid/expressions/assignment.src
fn main() -> int {
    int x = 5;
    x += 2;
    x -= 1;
    x *= 3;
    x /= 2;
    return x;
}