tests/parser/invalid/syntax_errors/invalid_assignment.src
fn main() {
    5 = x;
}